--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="Bcujf4j_Jsb5ezF0y3lxeW-gq5Asg3SB2eutvLlr4qE" />
     <title>Cartify</title>
   </head>
   <body>
